--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.7.0",
+    "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/vuetify": "0.5.5",
     "nuxt": "^2.0.0"
   },
