--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/auth": "^4.7.0",
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/vuetify": "0.5.5",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "pusher-js": "^5.0.0"
   },
   "devDependencies": {
     "stylus": "^0.54.5",
