--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "NODE_ENV=production BASE_URL=www.api.rabibot.bckcmo.com nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -18,7 +18,8 @@
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/vuetify": "0.5.5",
     "nuxt": "^2.0.0",
-    "pusher-js": "^5.0.0"
+    "pusher-js": "^5.0.0",
+    "vuetify-loader": "^1.3.0"
   },
   "devDependencies": {
     "stylus": "^0.54.5",
